--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: CICD de la mort qui tue
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
-  build
+  build:
     runs-on: ubuntu-latest
     steps:
       - run: git pull
